--- a/neovim.config
+++ b/neovim.config
@@ -1,3 +1,6 @@
+" ============================================================================
+" CORE CONFIGURATION
+" ============================================================================
 let mapleader = " "
 set clipboard=unnamedplus
 set splitright
@@ -5,58 +8,116 @@ set splitbelow
 set ignorecase
 set smartcase
 set incsearch
+set relativenumber
+set hlsearch
 
-" --- PLUGINS ---
+" ============================================================================
+" PLUGINS
+" ============================================================================
 call plug#begin()
     Plug 'catppuccin/nvim', { 'as': 'catppuccin' }
     Plug 'neoclide/coc.nvim', {'branch': 'release'}
     Plug 'leafgarland/typescript-vim'
     Plug 'peitalin/vim-jsx-typescript'
+    Plug 'tpope/vim-commentary'
+    Plug 'jiangmiao/auto-pairs'
+    Plug 'conform.nvim'
 call plug#end()
 
-" --- GENERAL SETTINGS ---
+" ============================================================================
+" DISPLAY & EDITOR SETTINGS
+" ============================================================================
 set number
 set mouse=a
 set tabstop=4
 set shiftwidth=4
 set expandtab
 
-" --- THEME LOADING ---
-if (has("termguicolors"))
-  set termguicolors
-endif
+" ============================================================================
+" THEME CONFIGURATION
+" ============================================================================
+"if (has("termguicolors"))
+"  set termguicolors
+"endif
 silent! colorscheme catppuccin-mocha
 
-" --- KEYBINDINGS ---
+" ============================================================================
+" KEYBINDINGS: LSP/CoC
+" ============================================================================
 nmap <leader>r <Plug>(coc-rename)
 nmap <leader>g <Plug>(coc-references)
 
+" ============================================================================
+" KEYBINDINGS: Window Management
+" ============================================================================
 nnoremap <leader>t :15split \| terminal<CR>
 nnoremap <leader>v :vsplit<CR>
 nnoremap <leader>h :split<CR>
 nnoremap <leader>q :q<CR>
 
-" Line Movement
+" ============================================================================
+" KEYBINDINGS: Line Movement
+" ============================================================================
 nnoremap <leader>j :m .+1<CR>==
 nnoremap <leader>k :m .-2<CR>==
 vnoremap <leader>j :m '>+1<CR>gv=gv
 vnoremap <leader>k :m '<-2<CR>gv=gv
 
-" --- WINDOW NAVIGATION (Ctrl + hjkl) ---
-" Use Ctrl + hjkl to jump between splits instantly
-nnoremap <C-h> <C-w>h
-nnoremap <C-j> <C-w>j
-nnoremap <C-k> <C-w>k
-nnoremap <C-l> <C-w>l
+" ============================================================================
+" KEYBINDINGS: Mac Shortcuts
+" ============================================================================
+" Save with Cmd+S
+nnoremap <D-s> :w<CR>
+inoremap <D-s> <Esc>:w<CR>a
+vnoremap <D-s> <Esc>:w<CR>gv
 
-" --- WINDOW RESIZING (Arrow Keys) ---
-" Use Ctrl + Arrows to resize the active pane
-nnoremap <C-Up>    :resize +2<CR>
-nnoremap <C-Down>  :resize -2<CR>
-nnoremap <C-Left>  :vertical resize -2<CR>
-nnoremap <C-Right> :vertical resize +2<CR>
+" Undo with Cmd+Z
+nnoremap <D-z> u
+inoremap <D-z> <Esc>ua
+vnoremap <D-z> <Esc>ugv
 
+" ============================================================================
+" KEYBINDINGS: Terminal & Insert Mode
+" ============================================================================
 " Escape hatch for terminal mode
 tnoremap <Esc> <C-\><C-n>
 
-autocmd BufWritePre *.ts,*.tsx,*.js,*.jsx silent! call CocAction('format')
+" Tab completion navigation
+inoremap <expr> <Tab> pumvisible() ? "\<C-n>" : "\<Tab>"
+inoremap <expr> <S-Tab> pumvisible() ? "\<C-p>" : "\<S-Tab>"
+
+" Confirm completion with Enter
+inoremap <silent><expr> <CR> coc#pum#visible() ? coc#pum#confirm()
+                              \: "\<C-g>u\<CR>\<c-r>=coc#on_enter()\<CR>"
+
+" ============================================================================
+" FUNCTIONS
+" ============================================================================
+function! BuildCurrentFile()
+    let filename = expand('%')
+    let extension = expand('%:e')
+
+    if extension == 'ts' || extension == 'tsx'
+        execute ':15split | terminal tsx ' . filename
+    elseif extension == 'js' || extension == 'jsx'
+        execute ':15split | terminal node ' . filename
+    elseif extension == 'py'
+        execute ':15split | terminal python3 ' . filename
+    elseif extension == 'sh'
+        execute ':15split | terminal bash ' . filename
+    else
+        echo 'Unknown file type'
+    endif
+    startinsert
+endfunction
+
+" ============================================================================
+" KEYBINDINGS: Build & Execute
+" ============================================================================
+nnoremap <leader>b :call BuildCurrentFile()<CR>
+
+" ============================================================================
+" AUTOCOMMANDS
+" ============================================================================
+" Format files on save using Coc's formatter
+autocmd BufWritePre *.ts,*.tsx,*.js,*.jsx silent! call CocAction('runCommand', 'prettier.formatFile')
